@@ -1,3 +1,8 @@
+2012-04-27  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/arm/arm-defs.m4 (LEA): New define.
+	* mpn/arm/invert_limb.asm: Use LEA.
+
 2012-04-26 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpz/bin_uiui.c (bc_bin_uiui): Nail support.
